# Advanced-Stock-Price-Prediction

./: .gitignore  CONTRIBUTING.md  README.md  adv_model_compare.ipynb  adv_model_compare_v2.ipynb  pyproject.toml  requirements.txt
notebooks/: analysis.ipynb
src/stock_prediction/: __init__.py  config.py
src/stock_prediction/data/: __init__.py  loader.py
src/stock_prediction/features/: __init__.py  engineer.py
src/stock_prediction/models/: __init__.py  evaluate.py  train.py
src/stock_prediction/visualization/: __init__.py  plots.py
tests/: conftest.py  test_evaluate.py  test_features.py  test_train.py
